--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(untitled1)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(untitled1 main.cpp include/SerialRouter.h src/VenueManager.cpp include/VenueManager.h include/Logger.h include/Order.h include/OrderSide.h include/OrderType.h include/TimeInForce.h include/OrderStatus.h include/Venue.h include/VenueRank.h include/Execution.h include/ExecutionType.h)
+add_executable(untitled1 include/SerialRouter.h src/VenueManager.cpp include/VenueManager.h include/Logger.h include/Order.h include/OrderSide.h include/OrderType.h include/TimeInForce.h include/OrderStatus.h include/Venue.h include/VenueRank.h include/Execution.h include/ExecutionType.h src/SerialRouter.cpp src/Main.cpp)
